--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1",
+        "react": "^16.14.0",
+        "react-dom": "^16.14.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.1",
+        "semantic-ui-css": "^2.4.1",
+        "semantic-ui-react": "^2.0.1",
         "web-vitals": "^0.2.4"
     },
     "scripts": {
