--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "topic-modeling-prototype",
     "version": "0.1.0",
     "private": true,
+    "proxy": "http://localhost:5000",
     "dependencies": {
         "node-sass": "^4.13.0",
         "react": "^16.14.0",
@@ -14,6 +15,7 @@
     },
     "scripts": {
         "start": "react-scripts start",
+        "start-api": "cd api && venv/bin/flask run --no-debugger",
         "build": "react-scripts build",
         "eject": "react-scripts eject"
     },
