--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules
 /.pnp
 .pnp.js
 venv
@@ -10,10 +10,11 @@ venv
 /coverage
 
 # production
-/build
+/frontend/build
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -24,3 +25,4 @@ __pycache__
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.vscode/settings.json
