--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "proxy": "http://localhost:5000",
     "dependencies": {
+        "diff": "^5.0.0",
         "framer-motion": "^3.1.1",
         "node-sass": "^4.13.0",
         "react": "^16.14.0",
