--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,12 @@
         "node-sass": "^4.13.0",
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
+        "react-icons": "^4.1.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.1",
         "semantic-ui-css": "^2.4.1",
         "semantic-ui-react": "^2.0.1",
+        "uuid": "^8.3.1",
         "web-vitals": "^0.2.4"
     },
     "scripts": {
