--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
         "nodemon": "^2.0.6"
     },
     "dependencies": {
+        "bcrypt": "^5.0.0",
         "dotenv": "^8.2.0",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.11.10",
+        "morgan": "^1.10.0",
+        "multer": "^1.4.2"
     }
 }
