--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "main": "server.js",
     "type": "module",
     "scripts": {
-        "start": "node backend/server",
-        "server": "nodemon backend/server",
-        "client": "npm start --prefix frontend",
+        "start": "node server/server",
+        "server": "nodemon server/server",
+        "client": "npm start --prefix client",
         "dev": "concurrently \"npm run server\" \"npm run client\""
     },
     "repository": {
