--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "proxy": "http://localhost:5000",
     "dependencies": {
+        "axios": "^0.21.1",
         "diff": "^5.0.0",
         "framer-motion": "^3.1.1",
         "node-sass": "^4.13.0",
