--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
         "bcrypt": "^5.0.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "express-fileupload": "^1.2.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.11.10",
         "morgan": "^1.10.0",
-        "multer": "^1.4.2"
+        "multer": "^1.4.2",
+        "uuid": "^8.3.2"
     }
 }
